# personal-assistant

./: .env.example  .gitignore  README.md  kroger_history_text.txt  pyproject.toml
core/: config.py  db.py
docs/: ROADMAP.md  agent_radio_show.md  game_engine_companion_research.md  holistic_wellness_tracker.md  household_backlog_spec.md  local_compute_expansion.md  sudoers_security_notes.md  voicebox_network_access.md  voicebox_research.md
integrations/: telegram.py
integrations/google/: calendar.py
integrations/kroger/: auth.py  client.py  history.py  promotions.py
integrations/plaid/: client.py
scripts/: add_item.py  debug_kroger_login.py  debug_kroger_network.py  find_store.py  kroger_login.py  plaid_link.py  scrape_kroger_history.py  seed_kroger_history.py  test_kroger.py
tasks/: aldi_ads.py  garmin_fitness.py  garmin_morning.py  money_status.py  rory_checkin.py  shipped_yesterday.py  sync_bills_to_calendar.py  sync_transactions.py  system_health.py  weekly_ads.py  wellness_check.py  wellness_forecast.py
