[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "integrations", "tasks", "scripts"]

[project]
name = "personal-assistant"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "plaid-python",
    "garminconnect",
    "google-api-python-client",
    "google-auth-oauthlib",
    "requests",
    "python-dotenv",
    "playwright>=1.60.0",
]

[dependency-groups]
dev = ["ruff", "pytest"]

[tool.ruff]
line-length = 100
